--- a/azure-pipeline.yaml
+++ b/azure-pipeline.yaml
@@ -11,11 +11,16 @@ pr:
 pool:
   vmImage: 'ubuntu-latest'
 
+variables:
+  azureSubscriptionEndpoint: 'contosoph-terraform-test-project-sp'
+  resourceGroupName: 'k8s-test'
+  storageAccountName: 'k8stestrg'
+
 steps:
   - task: TerraformInstaller@0
     displayName: 'Install Terraform'
     inputs:
-      terraformVersion: '0.14.7'
+      terraformVersion: 'v1.6.6'
 
   - script: |
       terraform init
