--- a/azure-pipeline.yaml
+++ b/azure-pipeline.yaml
@@ -14,7 +14,7 @@ pool:
 variables:
   azureSubscriptionEndpoint: 'contosoph-terraform-test-project-sp'
   resourceGroupName: 'k8s-test'
-  storageAccountName: 'k8stestrg'
+  storageAccountName: 'k8stestrg-test'
 
 steps:
   - task: TerraformInstaller@0
