--- a/sample_deployment/azure-pipeline.yaml
+++ b/sample_deployment/azure-pipeline.yaml
@@ -14,7 +14,7 @@ pool:
 variables:
   azureSubscriptionEndpoint: 'win365enterprise-terra-deploy-rg'
   resourceGroupName: 'terra-deploy-rg'
-  storageAccountName: 'k8stestrg'
+  storageAccountName: 'terratfstatestrg2'
 
 steps:
   - task: TerraformInstaller@0
