--- a/sample_deployment/azure-pipeline.yaml
+++ b/sample_deployment/azure-pipeline.yaml
@@ -15,8 +15,21 @@ variables:
   azureSubscriptionEndpoint: 'win365enterprise-terra-deploy-rg'
   resourceGroupName: 'terra-deploy-rg'
   storageAccountName: 'k8stestrg'
+  servicePrincipalId: 1b88e6b9-1666-4eb0-9502-3b0bd6988557
+  servicePrincipalKey: LiQ8Q~~uCK4CtzCcH7Kww3BrD6LP48ap2FdrqcXP
+  tenantId: cab4c3be-84af-48f5-960f-7415daff3a80
 
 steps:
+  - task: AzureCLI@2
+    displayName: 'Azure CLI - Login'
+    inputs:
+      azureSubscription: $(azureSubscriptionEndpoint)
+      scriptType: 'pscore'
+      scriptLocation: 'inlineScript'
+      inlineScript: |
+        az login --service-principal -u $(servicePrincipalId) -p $(servicePrincipalKey) --tenant $(tenantId)
+        cd sample_deployment
+
   - task: TerraformInstaller@0
     displayName: 'Install Terraform'
     inputs:
