--- a/azure-terraform/azure-pipeline.yaml
+++ b/azure-terraform/azure-pipeline.yaml
@@ -12,7 +12,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  azureSubscriptionEndpoint: 'win365enterprise-terra-deploy-rg'
+  azureSubscriptionEndpoint: 'win365ent-tennant'
   resourceGroupName: 'terra-deploy-rg'
   servicePrincipalId: 1b88e6b9-1666-4eb0-9502-3b0bd6988557
   servicePrincipalKey: LiQ8Q~~uCK4CtzCcH7Kww3BrD6LP48ap2FdrqcXP
