--- a/azure-terraform/azure-pipeline.yaml
+++ b/azure-terraform/azure-pipeline.yaml
@@ -18,6 +18,7 @@ variables:
   servicePrincipalKey: LiQ8Q~~uCK4CtzCcH7Kww3BrD6LP48ap2FdrqcXP
   tenantId: cab4c3be-84af-48f5-960f-7415daff3a80
   storageAccountName: 'terratfstatestrg2'
+  terraformDirectory: 'azure-terraform'
 
 
 steps:
@@ -37,7 +38,7 @@ steps:
       terraformVersion: 'v1.6.6'
 
   - script: |
-      
+      cd $(terraformDirectory)
       terraform init
       terraform plan -out=tfplan
     displayName: 'Terraform Init and Plan'
@@ -49,5 +50,6 @@ steps:
       artifactName: 'terraform-plan'
 
   - script: |
+      cd $(terraformDirectory)
       terraform apply -auto-approve tfplan
     displayName: 'Terraform Apply'
