--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,9 @@ steps:
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: 'az login --service-principal -t cab4c3be-84af-48f5-960f-7415daff3a80 -u 1b88e6b9-1666-4eb0-9502-3b0bd6988557 -p LiQ8Q~~uCK4CtzCcH7Kww3BrD6LP48ap2FdrqcXP'
-
+- task: TerraformInstaller@1
+  inputs:
+    terraformVersion: 'latest'
 
 - task: TerraformTaskV4@4
   inputs:
