Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,7 @@ steps:
     backendAzureRmResourceGroupName: 'terraform-aks-storage-rg'
     backendAzureRmStorageAccountName: 'terratfstatestrg2'
     backendAzureRmContainerName: 'tfstatefiles'
+    backendAzureRmKey: 'uat.terraform.tfstate'
 
 - task: TerraformTaskV4@4
   inputs:
