--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,11 +30,11 @@ steps:
     scriptLocation: 'inlineScript'
     inlineScript: 'az login --service-principal -t cab4c3be-84af-48f5-960f-7415daff3a80 -u 1b88e6b9-1666-4eb0-9502-3b0bd6988557 -p LiQ8Q~~uCK4CtzCcH7Kww3BrD6LP48ap2FdrqcXP'
 
-- task: TerraformInstallation
+- task: TerraformInstallation@1
   inputs:
     terraformVersion: 'latest'
 
-- task: TerraformInit
+- task: TerraformInit@2
   inputs:
     provider: 'azurerm'
     command: 'init'
@@ -44,14 +44,14 @@ steps:
     backendAzureRmContainerName: 'tfstatefiles'
     backendAzureRmKey: 'uat.terraform.tfstate'
 
-- task: TerraformPlan
+- task: TerraformPlan@3
   inputs:
     provider: 'azurerm'
     command: 'plan'
     workingDirectory: '$(System.DefaultWorkingDirectory)/sample_deployment/'
     environmentServiceNameAzureRM: 'win365ent-tennant'
 
-- task: TerraformApply
+- task: TerraformApply@4
   inputs:
     provider: 'azurerm'
     command: 'apply'
