--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,12 @@ steps:
 - task: TerraformInstaller@1
   inputs:
     terraformVersion: 'latest'
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: 'terraform init'
+    workingDirectory: '/sample_deployment'
+
 - task: TerraformTaskV4@4
   inputs:
     provider: 'azurerm'
