Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ steps:
   inputs:
     targetType: 'inline'
     script: 'terraform init'
-    workingDirectory: '/sample_deployment'
+    workingDirectory: '$(Build.ArtifactStagingDirectory)'
 
 - task: TerraformTaskV4@4
   inputs:
