--- a/sample_deployment/azure-pipeline.yaml
+++ b/sample_deployment/azure-pipeline.yaml
@@ -1,52 +1,59 @@
-trigger:
-  branches:
-    include:
-      - main
+# Starter pipeline
+# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
 
-pr:
-  branches:
-    include:
-      - '*'
+trigger:
+- master
 
 pool:
-  vmImage: 'ubuntu-latest'
-
-variables:
-  azureSubscriptionEndpoint: 'win365enterprise-terra-deploy-rg'
-  resourceGroupName: 'terra-deploy-rg'
-  servicePrincipalId: 1b88e6b9-1666-4eb0-9502-3b0bd6988557
-  servicePrincipalKey: LiQ8Q~~uCK4CtzCcH7Kww3BrD6LP48ap2FdrqcXP
-  tenantId: cab4c3be-84af-48f5-960f-7415daff3a80
-  storageAccountName: 'terratfstatestrg2'
-
+  vmImage: ubuntu-latest
 
 steps:
-  - task: AzureCLI@2
-    displayName: 'Azure CLI - Login'
-    inputs:
-      azureSubscription: $(azureSubscriptionEndpoint)
-      scriptType: 'pscore'
-      scriptLocation: 'inlineScript'
-      inlineScript: |
-        az login --service-principal -u $(servicePrincipalId) -p $(servicePrincipalKey) --tenant $(tenantId)
-        cd sample_deployment
 
-  - task: TerraformInstaller@0
-    displayName: 'Install Terraform'
-    inputs:
-      terraformVersion: 'v1.6.6'
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: 'sample_deployment'
+    Contents: '**'
+    TargetFolder: $(Build.ArtifactStagingDirectory)
 
-  - script: |
-      terraform init
-      terraform plan -out=tfplan
-    displayName: 'Terraform Init and Plan'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
 
-  - task: PublishPipelineArtifact@1
-    displayName: 'Publish Terraform Plan'
-    inputs:
-      targetPath: '$(Pipeline.Workspace)/tfplan'
-      artifactName: 'terraform-plan'
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'win365ent-tennant'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: 'az login --service-principal -t cab4c3be-84af-48f5-960f-7415daff3a80 -u 1b88e6b9-1666-4eb0-9502-3b0bd6988557 -p LiQ8Q~~uCK4CtzCcH7Kww3BrD6LP48ap2FdrqcXP'
 
-  - script: |
-      terraform apply -auto-approve tfplan
-    displayName: 'Terraform Apply'
+
+- task: TerraformInstaller@1
+  inputs:
+    terraformVersion: 'latest'
+
+- task: TerraformTaskV4@4
+  inputs:
+    provider: 'azurerm'
+    command: 'init'
+    backendServiceArm: 'win365ent-tennant'
+    backendAzureRmResourceGroupName: 'terraform-aks-storage-rg'
+    backendAzureRmStorageAccountName: 'terratfstatestrg2'
+    backendAzureRmContainerName: 'tfstatefiles'
+    backendAzureRmKey: 'uat.terraform.tfstate'
+
+- task: TerraformTaskV4@4
+  inputs:
+    provider: 'azurerm'
+    command: 'plan'
+    workingDirectory: '$(Build.ArtifactStagingDirectory)'
+    environmentServiceNameAzureRM: 'win365ent-tennant'
+
+- task: TerraformTaskV4@4
+  inputs:
+    provider: 'azurerm'
+    command: 'apply'
+    environmentServiceNameAzureRM: 'win365ent-tennant'
