--- a/sample_deployment/azure-pipeline.yaml
+++ b/sample_deployment/azure-pipeline.yaml
@@ -1,59 +1,38 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- master
+  branches:
+    include:
+      - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
 
 steps:
+  - task: UsePythonVersion@0
+    inputs:
+      versionSpec: '3.x'
+      addToPath: true
 
-- task: CopyFiles@2
-  inputs:
-    SourceFolder: 'sample_deployment'
-    Contents: '**'
-    TargetFolder: $(Build.ArtifactStagingDirectory)
+  - script: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt
+    displayName: 'Install Python dependencies'
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
+  - script: |
+      terraform init
+      terraform validate
+    displayName: 'Terraform Initialization and Validation'
 
-- task: AzureCLI@2
-  inputs:
-    azureSubscription: 'win365ent-tennant'
-    scriptType: 'bash'
-    scriptLocation: 'inlineScript'
-    inlineScript: 'az login --service-principal -t cab4c3be-84af-48f5-960f-7415daff3a80 -u 1b88e6b9-1666-4eb0-9502-3b0bd6988557 -p LiQ8Q~~uCK4CtzCcH7Kww3BrD6LP48ap2FdrqcXP'
+  - script: |
+      terraform plan -out=tfplan
+    displayName: 'Terraform Plan'
 
-
-- task: TerraformInstaller@1
-  inputs:
-    terraformVersion: 'latest'
-
-- task: TerraformTaskV4@4
-  inputs:
-    provider: 'azurerm'
-    command: 'init'
-    backendServiceArm: 'win365ent-tennant'
-    backendAzureRmResourceGroupName: 'terraform-aks-storage-rg'
-    backendAzureRmStorageAccountName: 'terratfstatestrg2'
-    backendAzureRmContainerName: 'tfstatefiles'
-    backendAzureRmKey: 'uat.terraform.tfstate'
-
-- task: TerraformTaskV4@4
-  inputs:
-    provider: 'azurerm'
-    command: 'plan'
-    workingDirectory: '$(Build.ArtifactStagingDirectory)'
-    environmentServiceNameAzureRM: 'win365ent-tennant'
-
-- task: TerraformTaskV4@4
-  inputs:
-    provider: 'azurerm'
-    command: 'apply'
-    environmentServiceNameAzureRM: 'win365ent-tennant'
+  - script: |
+      terraform apply -auto-approve tfplan
+    displayName: 'Terraform Apply'
+  - task: KubernetesManifest@0
+    inputs:
+      action: 'deploy'
+      kubernetesServiceConnection: '<your_kubernetes_service_connection>'
+      manifests: |
+        $(System.DefaultWorkingDirectory)/path/to/kubernetes.yaml
+    displayName: 'Deploy Kubernetes YAML'
